--- a/public/temp.html
+++ b/public/temp.html
@@ -5,7 +5,7 @@
     <title>Near Doomsday Misses</title>
     <!--<script src="../node_modules/react/dist/react.js"></script>-->
     <!--<script src="../node_modules/react/lib/ReactDOM.js"></script>-->
-    <script type="text/babel" src="javascripts/temp.js"></script>
+    <script type="text/babel" src="temp.js"></script>
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
 </head>
 <body>
